deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app 
    spec:
      containers: 
        - name: deployment-C1
          image: nginx:latest
          ports:
            - containerPort: 80
