pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: kube-practice
    image: nginx:latest
    ports:
    - containerPort: 80

# with namespace podyaml file 
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: my-namespace
spec:
  containers:
  - name: my-container
    image: nginx:latest
    ports:
    - containerPort: 80
