clusterIP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clusterip-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: cluster-app
  template:
    metadata:
      labels: 
        app: cluster-app
    spec:
      containers:
        - name: cluster-container
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  ports:
    - port: 2000
      targetPort: 80
      protocol: TCP
  selector:
    app: cluster-app
  type: ClusterIP
