loadwithoutType.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-service
spec:
  selector: 
    app: myservice-app
  ports:
    - port: 81 
      targetPort: 80
      protocol: TCP
