node-firewall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-nodeport
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nodeportapp
  template:
    metadata:
      labels:
        app: my-nodeportapp
    spec:
      containers:
        - name: my-nodeportcontainer
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-nodeport
  labels:
    app: my-nodeportapp
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP
  selector:
    app: my-nodeportapp
