nodeport.yaml
apiVersion: apps/V1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-container
          image: nginx:latest
          ports:
            - containerPort: 80
  replicas: 1
  selector:
    matchLabels:
      app: node-app
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app
  ports:
    - port: 83
      targetport: 80
      protocol: TCP
  type: NodePort
